<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InterestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_titile1"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/margin_xl"
                android:textSize="@dimen/text_title_x"
                android:layout_marginLeft="@dimen/text_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_titile2"
                android:textColor="@color/black"
                android:textSize="@dimen/text_title_x"
                android:layout_marginLeft="@dimen/text_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interest_titile3"
                android:layout_marginTop="3dp"
                android:textSize="@dimen/text_tip_s"
                android:layout_marginLeft="@dimen/text_title"/>
        </LinearLayout>

        <ImageView
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_xxl"
            android:layout_width="@dimen/logo_sl"
            android:layout_height="@dimen/logo"
            android:src="@drawable/logo"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp">

        <Button
            android:id="@+id/btn_int0"
            android:text="@string/interest_0"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int1"
            android:text="@string/interest_1"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int2"
            android:text="@string/interest_2"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

        <Button
            android:id="@+id/btn_int3"
            android:text="@string/interest_3"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp">

        <Button
            android:id="@+id/btn_int4"
            android:text="@string/interest_4"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int5"
            android:text="@string/interest_5"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int6"
            android:text="@string/interest_6"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

        <Button
            android:id="@+id/btn_int7"
            android:text="@string/interest_7"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp">

        <Button
            android:id="@+id/btn_int8"
            android:text="@string/interest_8"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int9"
            android:text="@string/interest_9"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int10"
            android:text="@string/interest_10"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

        <Button
            android:id="@+id/btn_int11"
            android:text="@string/interest_11"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/margin_xl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="25dp">

        <Button
            android:id="@+id/btn_int12"
            android:text="@string/interest_12"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button
            android:id="@+id/btn_int13"
            android:text="@string/interest_13"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>
        <Button

            android:id="@+id/btn_int14"
            android:text="@string/interest_14"
            android:layout_marginHorizontal="@dimen/margin_s"
            android:layout_weight="1"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:background="@drawable/btn_k"/>


    </LinearLayout>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:layout_marginBottom="@dimen/margin_xxl"
        android:id="@+id/btn_finsh"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center|bottom"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="进入首页"
        android:textSize="@dimen/text_main"
        android:background="@drawable/btn_0"/>
</LinearLayout>