<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:id="@+id/layout"
    android:layout_marginVertical="@dimen/dp_10"
    android:orientation="horizontal">
    <LinearLayout

        android:layout_marginLeft="@dimen/dp_10"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:layout_height="120dp">
        <ImageView
            android:layout_marginRight="5dp"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:layout_width="155dp"
            android:layout_height="125dp"
            android:id="@+id/news_image"/>
    </LinearLayout>

<LinearLayout
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/title_text" />

    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:visibility="visible"
        android:id="@+id/news_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/grey_45"
        android:textSize="14sp"
        tools:text="@string/content_text" />

    <TextView
        android:layout_gravity="right"
        android:id="@+id/news_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/grey_85"
        android:textSize="13sp"
        tools:text="@string/source_text" />

</LinearLayout>
  

</LinearLayout>