<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.youth.banner.Banner
        android:padding="20dp"
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/margin_m"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginRight="@dimen/margin_m" />
    <LinearLayout
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image_vedio_1"
                android:padding="15dp"
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_video_1"/>
            <TextView
                android:id="@+id/text_vedio_1"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/text_tip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/video_1"/>
            <View
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="#DDDDDD"/>
            <ImageView
                android:id="@+id/image_vedio_3"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_video_3"/>
            <TextView
                android:id="@+id/text_vedio_3"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/text_tip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/video_3"/>
            <View
                android:layout_marginVertical="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:background="#DDDDDD"/>
            <ImageView
                android:id="@+id/image_vedio_5"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/bg_video_5"/>
            <TextView
                android:id="@+id/text_vedio_5"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/text_tip"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginBottom="20dp"
                android:text="@string/video_5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="15dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_vedio_2"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bg_video_2"/>
                <TextView
                    android:id="@+id/text_vedio_2"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/text_tip"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_2"/>
                <View
                    android:layout_marginVertical="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="2sp"
                    android:background="#DDDDDD"/>
                <ImageView
                    android:id="@+id/image_vedio_4"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/bg_video_4"/>
                <TextView
                    android:id="@+id/text_vedio_4"
                    android:padding="15dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textSize="@dimen/text_tip"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_4"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>